# omada-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
docs/superpowers/plans/: 2026-03-26-omada-mcp-server.md
docs/superpowers/specs/: 2026-03-26-omada-mcp-server-design.md
src/omada_mcp/: __init__.py  client.py  server.py
tests/: test_client_auth.py  test_live.py  test_server.py
