[project]
name = "omada-mcp"
version = "1.0.0"
description = "MCP server for TP-Link Omada Controller"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.26.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
omada-mcp = "omada_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omada_mcp"]
